Fix sync doc loading and problems structure

--- a/views/problems/problems.html
+++ b/views/problems/problems.html
@@ -1,13 +1,13 @@
-<div w3-include-html="views/problems/_1.html"></div>
-<div w3-include-html="views/problems/_2.html"></div>
-<div w3-include-html="views/problems/_3.html"></div>
-<div w3-include-html="views/problems/_4.html"></div>
-<div w3-include-html="views/problems/_5.html"></div>
-<div w3-include-html="views/problems/_6.html"></div>
-<div w3-include-html="views/problems/_7.html"></div>
-<div w3-include-html="views/problems/_8.html"></div>
-<div w3-include-html="views/problems/_9.html"></div>
-<div w3-include-html="views/problems/_11.html"></div>
+<div w3-include-html="views/problems/p1.html"></div>
+<div w3-include-html="views/problems/p2.html"></div>
+<div w3-include-html="views/problems/p3.html"></div>
+<div w3-include-html="views/problems/p4.html"></div>
+<div w3-include-html="views/problems/p5.html"></div>
+<div w3-include-html="views/problems/p6.html"></div>
+<div w3-include-html="views/problems/p7.html"></div>
+<div w3-include-html="views/problems/p8.html"></div>
+<div w3-include-html="views/problems/p9.html"></div>
+<div w3-include-html="views/problems/p11.html"></div>
 
 
 
