Fix virtual breadcrumbs on history push state, and section reload on backwards and forwards navigation

--- a/views/problems/p3.html
+++ b/views/problems/p3.html
@@ -49,7 +49,7 @@
                 s.split("").forEach( e=> {
                     if(subs.includes(e)) subs = subs.substring(subs.indexOf(e)+1)
                     subs += e        
-                    if(longest < subs.length) longest = subs.length
+                    if(longest &lt subs.length) longest = subs.length
                 })
                 return longest
             };
