[Add] new react view

--- a/views/dataStructures/dataStructures.html
+++ b/views/dataStructures/dataStructures.html
@@ -74,6 +74,7 @@
         <li>
             <def2>O(n²)</def2> 
             <ul>
+                <li> Quadratic complexity.</li>
                 <li> Loop within a loop.</li>
                 <li> Whe pass n to the function, and it runs a for inside a for so its notation will be O(n * n) = O(n²).
                     <div class="poblem-solution__container">
@@ -136,6 +137,7 @@
         <li>
             <def2>O(log n)</def2> 
             <ul>
+                <li> Log of n complexity.</li>
                 <li> Its when we work with and sorted array using the technique <strong>divide and conquer</strong>.<li>
                 <li> For example when searching for an specific number in a sorted array, we can split the array in half, then a condition to see in wich half the number we are searching could be, then we repeat the process: <strong>divide and conquer</strong>.<li>
                 <li> If we have an array of lenght 8 we can find any item in just 3 steps, why? <strong>divide and conquer</strong>.
