--- a/views/git.html
+++ b/views/git.html
@@ -3,25 +3,25 @@
 <div class="block">
     <def1>Git</def1>
     <ul>
-        <li>Is a <strong>VCS (version control system)</strong> wich is a software to track and manage changes to files over time. </li>
-        <li>Its free and open source </li>
-        <li>Git is the version control software that runs locally on your machine, you don’t need to register for an account,
-            you don’t even need internet to use it. You can use git without even touching github </li>
+        <li>It's a <strong>VCS (version control system)</strong> wich is a software to track and manage changes to files over time. </li>
+        <li>Its free and open source. </li>
+        <li>Git is the version control software that runs locally on your machine, you don't need to register for an account,
+            you don't even need internet to use it. You can use git without even touching github </li>
     </ul>
 </div>
 
 <div class="block">
     <def1>Github</def1>
     <ul>
-        <li>Is a service that hosts git repositories in the cloud and makes it easier to collaborate with people.
-            You do need to sign up for an account to use github. It’s an online place to share work that is done using git.</li>
+        <li>It's a service that hosts git repositories in the cloud and makes it easier to collaborate with people.
+            You do need to sign up for an account to use github. It's an online place to share work that is done using git.</li>
     </ul>
 </div>
 
 <div class="block">
     <def1>Git repo</def1>
     <ul>
-        <li>Is a workspace which tracks and manages files within a folder. Anytime we want to use Git with a project, 
+        <li>It's a workspace which tracks and manages files within a folder. Anytime we want to use Git with a project, 
             app, etc we need to create a new git repository, we can have as many repos on our machine as needed, all with separate histories and contents.</li>
     </ul>
 </div>
@@ -29,7 +29,7 @@
 <div class="block">
     <def1>Working directory</def1>
     <ul>
-        <li>Is the place we are working.</li>
+        <li>It's the place we are working.</li>
     </ul>
 </div>
 
@@ -51,7 +51,7 @@
 <div class="block">
     <def1>gitignore</def1>
     <ul>
-        <li>File where we specify wich files and folder want to be ignored by git, for example unnecessary libraries, node_modules, keyFiles, etc.</li>
+        <li>File where we specify wich files and foldes want to be ignored by git, for example unnecessary libraries, node_modules, keyFiles, etc.</li>
         <li>.DS_Store will ignore files named .DS_Store</li>
         <li>folderName/ entire directory</li>
         <li>*.log all files with .log extension</li>
@@ -62,7 +62,7 @@
     <def1>Branch</def1>
     <ul>
         <li>Are alternative timelines of a project, they enable us to create separate contexts where we can try new things, or even work on multiple ideas in parallel.</li>
-        <li>If we make changes on one branch, they do not impact the other branches until we merge them.</li>
+        <li>If we make changes in one branch, they do not impact the other branches until we merge them.</li>
         <li>Master branch is usually the main branch / official working code base / when someone works on other branch, it is mereged to master.</li>
         <li>In 2020 the default master branch in gitHub was changed to main.</li>
     </ul>
@@ -71,7 +71,7 @@
 <div class="block">
     <def1>Remote</def1>
     <ul>
-        <li>Is a remote repository url.</li>
+        <li>It's a remote repository url.</li>
         <li>So when we <def-code>git remote add 'origin' 'url' </def-code> in a branch, we are specifying what the remote url is, and then we <def-code>push 'origin (name of the remote)'</def-code> 
             to upload changes 'remote' is the destination</li>
     </ul>
@@ -154,7 +154,7 @@
         <br>
         <li><def-code>git merge</def-code> 
             <ul>
-                <li>Is used to combine stuff of two branches.</li>
+                <li>It's used to combine stuff of two branches.</li>
                 <li>Usually we merge a feature branch to a master branch.</li>
                 <li>We merge branches. Not specific commits.</li>
                 <li>We always merge to the current HEAD branch (where our head is, where we are).</li>
@@ -247,7 +247,7 @@
             </ul>
         </li>
         <br>
-        <li><def-code>git rebase main</def-code>is like a merge, but it will cleanup the commits history, with both branch changes mixed in a single line.
+        <li><def-code>git rebase main</def-code> It's like a merge, but it will cleanup the commits history, with both branch changes mixed in a single line.
             <ul>
                 <li>Insted of merge feature from main (<def-code>git switch main</def-code> and then <def-code>git merge feature)</def-code>) 
                     <br>
