--- a/views/html.html
+++ b/views/html.html
@@ -21,7 +21,7 @@
     <def1>script</def1>
     <ul>
         <li>Scripts are appendend at the end of the body, before the closing tag (order matters), its commonly used props are: <em>src</em></li>
-        <li>It's are NOT selfclosing element <def-code>&ltscript src=""&gt</def-code> <def-code>&lt/script&gt</def-code>.</li>
+        <li>It's NOT a selfclosing element <def-code>&ltscript src=""&gt</def-code> <def-code>&lt/script&gt</def-code>.</li>
     </ul>
 </div>
 
@@ -29,7 +29,7 @@
     <def1>link</def1>
     <ul>
         <li>The link element allows authors to link their document to other resources.</li>
-        <li>It's ARE a selfclosing element <def-code>&ltlink hfref="" rel:"" &gt</def-code>.</li>
+        <li>It's a selfclosing element <def-code>&ltlink hfref="" rel:"" &gt</def-code>.</li>
         <li>It <strong>must</strong> contain a <em>href</em> attribute which must be present and must contain a valid non-empty URL potentially surrounded by spaces.</li>
         <li>It <strong>must</strong> contain a <em>rel</em> attribute, which, if present, must have a value that is a set of space-separated tokens. 'stylesheet'</li>
     </ul>
